--- a/pages/post/improve-your-hooks-with-ref.mdx
+++ b/pages/post/improve-your-hooks-with-ref.mdx
@@ -8,7 +8,7 @@ tags:
   - 'react'
   - 'hooks'
   - 'ref'
-description: 'Ref를 활용한 사용자(개발자) 경험 개선'
+description: '사용자(개발자) 경험도 개선됩니다!'
 ---
 
 ## 목차
@@ -30,7 +30,6 @@ import Button from '@/components/button';
 
 
 ```typescript
-
 // 파라미터로 함수 전달
 useExample(() => {
   /* do something... */
@@ -41,7 +40,7 @@ useExample(() => {
 
 결국 사용하는 쪽에서 그것을 규칙으로 지켜줘야 하는 상황이 됩니다.
 
-> **"이 Hooks를 사용할 때는 전달되는 함수가 불필요하게 변경되는지 꼭 확인해주세요~"**
+> **이 Hooks를 사용할 때는 전달되는 함수가 불필요하게 변경되는지 꼭 확인해주세요~**
 
 이번 글에서는 ref를 이용해 규칙을 만들지 않으면서도 성능과 동작에 문제가 없는 custom hooks를 만드는 방법에 대해서 이야기해보겠습니다.
 
@@ -79,7 +78,7 @@ function useBrowserEvent(
 
 아차 뭔가 빠뜨린게 있네요. 파라미터로 전달만은 `eventType` 값과 `listener` 함수는 변경될 수 있기 때문에 `useEffect`의 의존성 배열로 전달되어야 합니다.
 
-```typescript
+```typescript{12}
 function useBrowserEvent(
   eventType,
   listener,
@@ -129,7 +128,7 @@ function Page() {
 
 이런 불필요한 연산을 방지하기 위해서는 이벤트 리스너를 `useCallback`으로 감싸주면 됩니다. 
 
-```tsx
+```tsx{4}
 function Page() {
   // ...
 
@@ -159,7 +158,7 @@ ref를 이용하면 위에서 언급한 문제를 해결할 수 있습니다.
 
 먼저 우리가 사용해야 하는 `listener` 함수를 ref 변수인 `callbackRef`에 할당해줍니다. 그리고 이벤트 리스너는 `callbackRef` 저장된 함수를 이용하도록 만들어줍니다.
 
-```typescript
+```typescript{10,13,16}
 import { useRef, useEffect } from 'react';
 
 function useBrowserEvent(
@@ -197,7 +196,7 @@ function useBrowserEvent(
 
 1단계의 문제는 `addEventListener`로 전달되는 함수와 `removeEventListener`로 전달되는 함수가 같지 않다는 것입니다. 그렇다면 우리는 두 함수가 같도록 만들어주면 됩니다. 
 
-```typescript
+```typescript{12,13,14,16,18}
 import { useRef, useEffect } from 'react';
 
 function useBrowserEvent(
