chore: change directory

--- a/pages/post/improve-your-hooks-with-ref.mdx
+++ b/pages/post/improve-your-hooks-with-ref.mdx
@@ -13,7 +13,7 @@ description: '사용자(개발자) 경험도 개선됩니다!'
 
 ## 목차
 - [이벤트 리스너를 위한 hooks 만들어보기](#이벤트-리스너를-위한-hooks-만들어보기)
-- [`useCallback`을 써야하지 않나요?](#usecallback을-써야하지-않나요-1)
+- [`useCallback`을 써야하지 않나요?](#usecallback을-써야하지-않나요)
 - [ref로 규칙 없애보기](#ref로-규칙-없애보기)
 - [마무리](#마무리)
 
