--- a/pages/post/improve-your-hooks-with-ref.mdx
+++ b/pages/post/improve-your-hooks-with-ref.mdx
@@ -146,7 +146,7 @@ function Page() {
 
 하지만 저희는 규칙을 하나 만들었습니다. 앞으로 `useBrowserEvent`를 사용할 때 두 번째 파라미터로 전달되는 `listener` 함수의 참조가 변경되는지를 잘 살펴봐주어야 하며, 우려가 될 때는 `useCallback`을 써주어야 한다는 규칙입니다. 이런 규칙은 많은 사람들이 함께 쓰는 경우 지켜지지 않을 수 있다는 리스크가 있습니다.
 
-#### 이런 규칙 없이 사용할 수는 없을까요?
+> 이런 규칙 없이 사용할 수는 없을까요?
 
 ## ref로 규칙 없애보기
 
@@ -154,7 +154,7 @@ React 함수 컴포넌트에서 ref는 특별한 존재입니다. [컴포넌트 
 
 ref를 이용하면 위에서 언급한 문제를 해결할 수 있습니다.
 
-### 1단계: 함수를 ref에 할당하기
+#### 1단계: 함수를 ref에 할당하기
 
 먼저 우리가 사용해야 하는 `listener` 함수를 ref 변수인 `callbackRef`에 할당해줍니다. 그리고 이벤트 리스너는 `callbackRef` 저장된 함수를 이용하도록 만들어줍니다.
 
@@ -192,7 +192,7 @@ function useBrowserEvent(
 
 결국 처음에 등록된 이벤트 리스너는 **제거되지 않고 계속 존재하게 됩니다.**
 
-### 2단계: 변경되지 않는 함수 안에서 ref 사용하기
+#### 2단계: 변경되지 않는 함수 안에서 ref 사용하기
 
 1단계의 문제는 `addEventListener`로 전달되는 함수와 `removeEventListener`로 전달되는 함수가 같지 않다는 것입니다. 그렇다면 우리는 두 함수가 같도록 만들어주면 됩니다. 
 
