feat: add table of contents

--- a/pages/post/break-the-components.mdx
+++ b/pages/post/break-the-components.mdx
@@ -593,7 +593,7 @@ Render Props를 사용하니 Context나 `cloneElement`를 사용할 때보다 `<
 
 비즈니스가 변화해온 양상을 지켜보고 어떻게 변화할지 예측하고 그 변화양상에 맞는 컴포넌트를 만드는 습관은 멋진 개발 경험을 만든는데 도움이 될 수 있다고 생각합니다.
 
-### 참고한 컨텐츠
+## 참고한 컨텐츠
 
 - Ryan Florence - [Compound Components](https://www.youtube.com/watch?v=hEGg-3pIHlE&feature=youtu.be) 
 - Michael Jackson - [Never Write Another HoC](https://www.youtube.com/watch?v=BcVAq3YFiuc&feature=youtu.be)
