--- a/pages/post/improve-your-hooks-with-ref.mdx
+++ b/pages/post/improve-your-hooks-with-ref.mdx
@@ -11,12 +11,6 @@ tags:
 description: '사용자(개발자) 경험도 개선됩니다!'
 ---
 
-## 목차
-- [이벤트 리스너를 위한 hooks 만들어보기](#이벤트-리스너를-위한-hooks-만들어보기)
-- [`useCallback`을 써야하지 않나요?](#usecallback을-써야하지-않나요)
-- [ref로 규칙 없애보기](#ref로-규칙-없애보기)
-- [마무리](#마무리)
-
 React 함수 컴포넌트에서 중복되는 로직은 custom hooks를 이용해 추상화시킬 수 있습니다.
 
 custom hooks를 정의해 사용하다 보면 아래와 같이 함수를 전달받는 경우가 자주 생기죠.
@@ -222,12 +216,14 @@ function useBrowserEvent(
 
 앞서 보았던 이슈들이 해결되었는지 확인해볼까요?
 
-#### 1. add, remove 함수가 다르다는 문제
+**1. add, remove 함수가 다르다는 문제**
+
 방금 1단계에서 마주쳤던 문제는 더이상 존재하지 않습니다. 왜냐하면 add, remove 함수가 모두 같은 `onEvent` 함수를 참조하기 때문입니다.
 
 `useEffect`의 의존성 배열에는 `eventType` 값만 전달하면 됩니다. `listener` 함수는 ref로 감싸져있기 때문에 의존성 배열에 들어가 필요가 없거든요!
 
-#### 2. 규칙이 생기는 문제
+**2. 규칙이 생기는 문제**
+
 첫 구현체에서 생겼던 **규칙**(*`listener`를 `useCallback`으로 감싸줘야한다*)**도 더이상 존재하지 않습니다.** `useCallback`으로 감싸주지 않아도 불필요한 add, remove가 발생하지 않으며, 항상 최신 함수를 참조한다는 것도 보장이 되었습니다.
 
 다음과 같이 사용해도 문제가 되지 않는다는 뜻입니다!
